Rsa tests added. Crypto base types remade

--- a/PhlegmaticOne.Crypto.Tests/PhlegmaticOne.Crypto.Tests.csproj
+++ b/PhlegmaticOne.Crypto.Tests/PhlegmaticOne.Crypto.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PhlegmaticOne.Crypto.Assymetric.RSA\PhlegmaticOne.Crypto.Assymetric.RSA.csproj" />
+    <ProjectReference Include="..\PhlegmaticOne.Crypto.Assymetric.RSA\PhlegmaticOne.Crypto.Asymmetric.RSA.csproj" />
     <ProjectReference Include="..\PhlegmaticOne.Crypto.ClassicCrypto.DigitalCryptography\PhlegmaticOne.Crypto.ClassicCrypto.DigitalCryptography.csproj" />
     <ProjectReference Include="..\PhlegmaticOne.Crypto.ClassicCrypto.PolybiusSquare\PhlegmaticOne.Crypto.ClassicCrypto.PolybiusSquare.csproj" />
     <ProjectReference Include="..\PhlegmaticOne.Crypto.Symmetric.Gamma\PhlegmaticOne.Crypto.Symmetric.Gamma.csproj" />
