--- a/Tests/PhlegmaticOne.Crypto.Tests/PhlegmaticOne.Crypto.Tests.csproj
+++ b/Tests/PhlegmaticOne.Crypto.Tests/PhlegmaticOne.Crypto.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,6 +27,7 @@
     <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.ClassicCrypto.DigitalCryptography\PhlegmaticOne.Crypto.ClassicCrypto.DigitalCryptography.csproj" />
     <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.ClassicCrypto.PolybiusSquare\PhlegmaticOne.Crypto.ClassicCrypto.PolybiusSquare.csproj" />
     <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.Core\PhlegmaticOne.Crypto.Core.csproj" />
+    <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.Symmetric.Feistel\PhlegmaticOne.Crypto.Symmetric.Feistel.csproj" />
     <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.Symmetric.Gamma\PhlegmaticOne.Crypto.Symmetric.Gamma.csproj" />
     <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.Symmetric.Polynomial\PhlegmaticOne.Crypto.Symmetric.Polynomial.csproj" />
     <ProjectReference Include="..\..\src\PhlegmaticOne.Crypto.Symmetry.CardanoGrid\PhlegmaticOne.Crypto.Symmetric.CardanoGrid.csproj" />
